--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class = "container">
+      <% flash.each do |key, value| %>
+        <%= content_tag(:div, value,class: "#{key}") %>
+      <% end %>
+      <%= yield %>
+    </div>
   </body>
 </html>
