--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,2 +1,20 @@
-<h1>Posts#new</h1>
-<p>Find me in app/views/posts/new.html.erb</p>
+<h1>投稿画面</h1>
+
+<%= form_with(model: @post, local: true) do |f| %>
+  <div class= "container">
+    <div class="post-title">
+      <%= f.label :title, class: "my-2" %>
+      <%= f.text_field :title, class: "form-control" %>
+    </div>
+    <div class="post-text">
+      <%= f.label :text, class: "my-2" %>
+      <%= f.text_field :text, class: "form-control" %>
+    </div>
+    <div class="field my-4">
+      <%= f.label :image , class: "mr-4"%>
+      <%= f.file_field :image %>
+      <%= f.hidden_field :image_cache %>
+    </div>
+    <%= f.submit "投稿", class: "btn btn-primary mt-3" %>
+  </div>
+<% end %>
