--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       <% end %>
 
       <% if logged_in? %>
-        <%# <%= link_to "",user_path(current_user.id) %>
+        <%# <%= link_to "",user_path(current_user.id) postができてから追加予定　%>
         <%= link_to "Logout", session_path(current_user.id),method: :delete %>
       <% else %>
         <%= link_to "Sign up", new_user_path %>
