--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,2 +1,29 @@
-<h1>Posts#show</h1>
-<p>Find me in app/views/posts/show.html.erb</p>
+<h1>詳細</h1>
+
+<div class="nav justify-content-end">
+  <table class="table table-hover">
+    <tbody>
+      <tr>
+        <th>タイトル</th>
+        <td><%= @post.title %>
+      </tr>
+      <tr>
+        <th>テキスト</th>
+        <td><%= @post.text %>
+      </tr>
+      <tr>
+        <th>画像</th>
+        <td><%= image_tag @post.image.url if @post.image.url %>
+      </tr>
+      <tr>
+        <th>投稿者</th>
+        <td><%= @post.user.name %>
+      </tr>
+      <tr>
+        <th>投稿時間</th>
+        <td><%= @post.created_at %>
+      </tr>
+    </tbody>
+  </table>
+</div>
+<%= link_to "一覧画面へ", posts_path, class: "btn btn-primary" %>
