編集機能、削除機能実装

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,11 +17,11 @@
       <% end %>
 
       <% if logged_in? %>
-        <%# <%= link_to "",user_path(current_user.id) postができてから追加予定　%>
-        <%= link_to "Logout", session_path(current_user.id),method: :delete %>
+        <%= link_to "一覧画面",posts_path , class: "btn btn-primary pull-right" %>
+        <%= link_to "Logout", session_path(current_user.id),method: :delete, class: "btn btn-primary pull-right" %>
       <% else %>
-        <%= link_to "Sign up", new_user_path %>
-        <%= link_to "Login", new_session_path %>
+        <%= link_to "Sign up", new_user_path, class: "btn btn-primary pull-right" %>
+        <%= link_to "Login", new_session_path, class: "btn btn-primary pull-right" %>
       <% end %>
 
       <%= yield %>
