--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,13 +7,15 @@
         <th>タイトル</th>
         <th>内容</th>
         <th>投稿者</th>
+        <th></th>
       </tr>
     <% @posts.each do |post| %>
       <tr>
-        <td><%= post.title %></td>
+        <td><%= link_to post.title,post_path(post.id) %></td>
         <td><%= post.text %></td>
         <td><%= post.user.name %></td>
-        <td><%= link_to "詳細",post_path(post.id) %>
+        <td><%= link_to "編集", edit_post_path(post.id), class: "btn btn-primary" %></td>
+        <td><%= link_to "削除", post_path(post.id), method: :delete, data: { confirm: "本当に削除していいですか？"} ,class: "btn btn-primary" %></td>
       </tr>
     <% end %>
     </thead>
