--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,31 +1,3 @@
 <h1>投稿画面</h1>
 
-<%= form_with(model: @post, local: true) do |f| %>
-  <% if @post.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= @post.errors.count %>件のエラーがあります</h2>
-      <ul>
-      <% @post.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class= "container">
-    <div class="post-title">
-      <%= f.label :title, class: "my-2" %>
-      <%= f.text_field :title, class: "form-control" %>
-    </div>
-    <div class="post-text">
-      <%= f.label :text, class: "my-2" %>
-      <%= f.text_field :text, class: "form-control" %>
-    </div>
-    <div class="field my-4">
-      <%= f.label :image , class: "mr-4"%>
-      <%= f.file_field :image %>
-      <%= f.hidden_field :image_cache %>
-    </div>
-    <%= f.submit "投稿", class: "btn btn-primary mt-3" %>
-  </div>
-<% end %>
+<%= render 'form' %>
