--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,6 +1,6 @@
 
 
-<%= form_with(model: @post, local: true) do |f| %>
+<%= form_with(model: @post, local: true, url: choose_new_or_edit ) do |f| %>
   <% if @post.errors.any? %>
     <div id="error_explanation">
       <h2><%= @post.errors.count %>件のエラーがあります</h2>
